--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <nav>
+        <ul>
+        <li>
+        <a href="#"> Home </a>
+        </li>
+        <li>
+        <a href="#"> About </a>
+        </li>
+        <li>
+        <a href="#"> Contact </a>
+        </li>
+        <li> <a href="#"> Terms of use </a>
+        </li>
+        <li>
+        <a href="#"> Join Us </a>
+        </li>
+        </ul>
+        </nav>
+        </header>
     <h1>Let's do this</h1>
 </body>
 </html>
