--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <h1 class="display-4">Hello, world!</h1>
 
             <a class="btn btn-primary btn-lg" href="https://github.com/" role="button">Click To Github</a>
+            <a class="btn btn-primary btn-lg" href="https://hacktoberfest.digitalocean.com/" role="button">Click To Hacktober Fest</a>
           </div>
 </body>
 </html>
