--- a/index.html
+++ b/index.html
@@ -121,6 +121,27 @@
                 </nav>
             </Footer>
           </div>
+        <br>
+<table border="2" cellpadding ="5" bordercolor="black">
+<tr>
+	<td colspan="2" bgcolor="red">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+	
+	&nbsp </td>
+	<td rowspan="3" bgcolor="green">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+	</td>
+</tr>
+<tr>
+	<td rowspan="3"bgcolor="yellow">&nbsp </td>
+	<td rowspan="2" bgcolor="blue">&nbsp</td>
+	
+</tr>
+<tr>
+	
+	
+</tr>
+<tr>
+	<td colspan="2" bgcolor="pink">&nbsp</td>
+</tr>
 
         
 
