--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="https://hacktoberfest.digitalocean.com/faq">FAQ</a>
                         </li>
-
+                        
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./cheems.html">Cheems Generator</a>
+                        </li>
 
 
                     </ul>
