--- a/home.html
+++ b/home.html
@@ -17,6 +17,12 @@
         <h2>
             What is hacktoberfest?
         </h2>
+    <h1>
+        WELCOME TO HACKTOBERFEST 2021
+    </h1>
+    <h1>
+        WELCOME TO HACKTOBERFEST 2021
+    </h1>
         <br>
         Hacktoberfest is a month-long celebration of open-source software by DigitalOcean that encourages participation in giving back to the open-source community.
         Developers get involved by completing pull requests, participating in events, and donating to open source projects. During this event, anyone can support open source by contributing changes and earn limited-edition swag.
